[project]
name = "planka-board-clone"
version = "0.1.0"
description = "CLI to create a Planka board from an existing board (template-style clone)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "plankapy>=2.4",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["services*"]
